--- a/Resources/index.html
+++ b/Resources/index.html
@@ -27,7 +27,7 @@ rel="stylesheet">
                 </div>
             </nav>
             <div class="hero-text-box">
-                <h1>Goodbye junk food.<br>Hello Super healthy meals.</h1>
+                <h1>Hello Omni-Family.<br/> Better Food &mdash; <span class="faster">faster payment</span>  </h1>
                 <a class="btn btn-full" href="#">I'm hungry</a>
                 <a class="btn btn-ghost" href="#">Show me more</a>
             </div>
@@ -35,9 +35,8 @@ rel="stylesheet">
 
         <section class="section-features">
             <div class="row">
-                <h2>Get food fast &mdash; not fast food</h2>
-                <p class="long-copy">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, 
-                    we’re really good at it, we promise!
+                <h2>Get food fast &mdash; With easy payment</h2>
+                <p class="long-copy">Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. Get food fast with easy <span class="faster"> POS payment </span>
                 </p>
             </div>
                 <div class="row">
@@ -67,9 +66,10 @@ rel="stylesheet">
                     </div>
                     <div class="col span-1-of-4 box">
                         <ion-icon name="cart-outline" class="icon-big"></ion-icon>
-                        <h3>Order anything</h3>
-                        <p>We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. 
-                            It's up to you!</p>
+                        <h3>Fast Payment</h3>
+                        <p>
+                            Our Point of Sale (POS) service allows for easy and faster payment like never before.
+                        </p>
                     </div>
                 </div>
         </section>
@@ -147,7 +147,7 @@ rel="stylesheet">
 
                         <div class="works-step">
                             <div>3</div>
-                    <p>Enjoy your meal after less than 20 minutes. See you the next 
+                    <p>Pay with our fast and reliable POS service. Enjoy your meal after less than 20 minutes. See you the next 
                         time!</p>
                         </div>
 
@@ -164,7 +164,7 @@ rel="stylesheet">
                         <div class="row">
                             <div class="col span-1-of-4 box">
                                 <img src="img/lisbon-3.jpg" alt="Lisbon">
-                                <h3>Lisbon</h3>
+                                <h3>Ilishan</h3>
                                 <div class="city-feature">
                                     <ion-icon name="person" class="icon-small"></ion-icon>
                                     1600+ happy eaters
@@ -181,7 +181,7 @@ rel="stylesheet">
 
                             <div class="col span-1-of-4 box">
                                 <img src="img/san-francisco.jpg" alt="san francisco" >
-                                <h3>San Francisco</h3>
+                                <h3>Ikeja</h3>
                                 <div class="city-feature">
                                     <ion-icon name="person" class="icon-small"></ion-icon>
                                     3700+ happy eaters
@@ -238,23 +238,23 @@ rel="stylesheet">
                         <div class="row">
                             <div class="col span-1-of-3">
                                 <blockquote>
-                                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. 
-                                    Now that I got used to it,I couldn't live without my daily meals!
-                                    <cite><img src="img/customer-1.jpg">Alberto Duncan</cite>
+                                    Inexpensive, and their payment service is very fast and reliable and this their food is top notch. If i was a lecturer and if this was a project i'd grade them <span class="faster"> "A"</span> !
+                                    <cite><img src="img/customer-12.jpeg">Onome Blaise</cite>
                                 </blockquote>
                             </div>
 
                             <div class="col span-1-of-3">
                                 <blockquote>
-                                    Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. 
-                                    Me and my family are so in love!
+                                    
+                                    Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. 
+                                    Now that I got used to it,I couldn't live without my daily meals!
                                     <cite><img src="img/customer-2.jpg">Joana Silva</cite>
                                 </blockquote>
                             </div>
 
                             <div class="col span-1-of-3">
-                                <blockquote>I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. 
-                                    Keep up the great work!
+                                <blockquote>I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery and payment service in the Bay Area. 
+                                    Keep up the great work !
                                     <cite><img src="img/customer-3.jpg">Milton Chapman</cite>
                                 </blockquote>
                             </div>
@@ -282,7 +282,7 @@ rel="stylesheet">
                                         </ul>
                                     </div>
                                     <div>
-                                        <a href="#" class="btn btn-full">Sign Up Now</a>
+                                        <a href="#" class="btn btn-full">Order Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -303,7 +303,7 @@ rel="stylesheet">
                                         </ul>
                                     </div>
                                     <div>
-                                        <a href="#" class="btn btn-ghost">Sign Up Now</a>
+                                        <a href="#" class="btn btn-ghost">Order Now</a>
                                     </div>
                                 </div>
                             </div>
@@ -324,7 +324,7 @@ rel="stylesheet">
                                         </ul>
                                     </div>
                                     <div>
-                                        <a href="#" class="btn btn-ghost">Sign Up Now</a>
+                                        <a href="#" class="btn btn-ghost">Order Now</a>
                                     </div>
                                 </div>
                             </div>
